--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ footer.page-footer {
 }
 
 h5{
-  margin-top: 0px;
+  margin-top: 50px;
   padding: 30px;
 }
 
@@ -110,13 +110,13 @@ h5{
   width: 100%;
 }
 #imgsection{
-  width: 100%;
+  width: 80%;
   float: left;
   border-radius: 50%;
   padding: 5%;
 }
 #p_section{
-  font-size: 17px;
+  font-size: 20px;
   margin-left: 50px;
   margin-right: 50px;
 }
@@ -139,4 +139,7 @@ li{
   font-family: Roboto;
   font-size: 20px;
   color: black;
+}
+#formulario{
+  margin:auto;
 }
